# backend_messenger_app

./: .env-example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  requirements_old2.txt
Static/: style.css
chat/: admin.py  apps.py  commands.py  consumers.py  filters.py  models.py  routing.py  serializers.py  signals.py  task.py  urls.py  utils.py  views.py  whatsapp_requests.py
chat/migrations/: 0001_initial.py  0002_wabachannel.py  0002_whatsapppost.py  0003_message_send_by_operator_message_whatsapp_message_id_and_more.py  0003_rename_update_at_wabachannel_updated_at.py  0004_message_media_id_message_type.py  0004_wabachannel_channel_external_id_and_more.py  0005_attendance_attendance_channel.py  0005_message_media.py  0006_attendance_last_message_was_sent_by_operator_and_more.py  0006_contact_message_contacts.py  0007_remove_contact_first_name_remove_contact_last_name_and_more.py  0007_status.py  0008_alter_message_body.py  0008_message_failed_reason.py  0009_message_context.py  0009_message_hsm_body_message_hsm_buttons_and_more.py  0010_highstructuredmessage.py  0010_remove_message_hsm_body_alter_message_hsm_footer_and_more.py  0011_buttons_highstructuredmessage_footer_and_more.py  0011_remove_message_chat_messag_attenda_14cc48_idx_and_more.py  0012_attendance_reaction.py  0012_highstructuredmessage_body_variables_quantitty_and_more.py  0018_message_origin_identifier.py  (+27 more)
core/: asgi.py  celery.py  redis_client.py  redis_status_gate.py  settings.py  urls.py
user/: admin.py  forms.py  models.py
(+12 files in other folders)
